[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "net-stability"
version = "1.5.0"
description = "A conservative, reversible network reliability tuner with a small cross-platform GUI."
readme = "README.md"
requires-python = ">=3.10"
license = "Unlicense"
authors = [{ name = "Master0fFate" }]
keywords = ["wifi", "network", "npm", "diagnostics", "tkinter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Networking",
]
dependencies = ["websockets>=14,<17"]

[project.optional-dependencies]
build = ["pyinstaller>=6", "pillow>=10", "tomli>=2; python_version<'3.11'"]

[project.urls]
Homepage = "https://github.com/Master0fFate/net-stability"
Issues = "https://github.com/Master0fFate/net-stability/issues"

[project.scripts]
net-stability = "net_stability:main"
net-stability-gui = "net_stability_gui:main"

[tool.setuptools]
py-modules = [
    "net_stability",
    "net_stability_action_policy",
    "net_stability_benchmark",
    "net_stability_build_guard",
    "net_stability_ndt7",
    "net_stability_gui",
    "net_stability_gui_commands",
    "net_stability_link_diagnostics",
    "net_stability_wifi_analysis",
    "net_stability_router_diagnostics",
    "net_stability_router_rules",
    "windows_dns_policy",
    "windows_dns_policy_models",
    "windows_dns_policy_repair",
    "windows_dns_policy_shell",
]
